crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.SpatialInformation.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
target_frame: []
show_bounding_box: [false]
show_axes: [false]
axes: [[3, 2, 5]]
